k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-security-webhook
  namespace: webhook-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-security-webhook
  template:
    metadata:
      labels:
        app: pod-security-webhook
    spec:
      serviceAccountName: pod-security-webhook

      containers:
        - name: webhook
          image: cemo07/pod-security-webhook:v6.5
          imagePullPolicy: IfNotPresent
          
          ports:
            - containerPort: 8443
              name: https

            - containerPort: 9091
              name: metrics

          volumeMounts:
            - name: tls-certs
              mountPath: /tls
              readOnly: true

      volumes:
        - name: tls-certs
          secret:
            secretName: pod-security-webhook-tls
