k8s/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-security-webhook
webhooks:
- name: podsecurity.webhook.example.com
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Fail
  clientConfig:
    service:
      name: pod-security-webhook
      namespace: webhook-system
      path: /validate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURzVENDQXBtZ0F3SUJBZ0lVY05QUFQ0NHhKWEVtVW11RlF6cGRWenQ4ZmZrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd01qRXdNQzRHQTFVRUF3d25jRzlrTFhObFkzVnlhWFI1TFhkbFltaHZiMnN1ZDJWaWFHOXZheTF6ZVhOMApaVzB1YzNaak1CNFhEVEkyTURZeU16RTJNVGN3TWxvWERUTTJNRFl5TURFMk1UY3dNbG93TWpFd01DNEdBMVVFCkF3d25jRzlrTFhObFkzVnlhWFI1TFhkbFltaHZiMnN1ZDJWaWFHOXZheTF6ZVhOMFpXMHVjM1pqTUlJQklqQU4KQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBdGVsNk1iNVVBelg5Mjk0RHpYbnJnVTFxWHdsQgpRdlRGdnhxaEM0UT [...]
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]

  namespaceSelector:
    matchLabels:
      webhook: enabled

  objectSelector:
    matchExpressions:
    - key: app
      operator: NotIn
      values:
      - pod-security-webhook
